--- a/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
+++ b/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
@@ -7,11 +7,29 @@
 </head>
 <body>
 <div layout:fragment="contenuto-pagina" class="text-center">
+
+
+    <div class="row">
+        <div class="col">
+            <div class="card shadow mb-3">
+                <div class="card-header py-3">
+                    <h3 class="text-dark mb-4">Informazioni account</h3>
+                    <div class="row">
+                        <div class=" col-md-9 col-lg-9 ">
+                            <table class="table table-user-information">
+                                <tbody>
+                                <tr th:each="esperto : ${esperti}">
+                                    <td th:text="${esperto.nome}"></td>
+                                    <td th:each="genere : ${esperto.getGeneri()}" th:text="${genere.nome}"></td>
+                                </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+
+
 <table>
-    <tr th:each="esperto : ${esperti}">
-        <td th:text="${esperto.getNome()}"></td>
-        <td th:text="${esperto.getGeneri()}"></td>
-    </tr>
+
 </table>
 </div>
 </body>
