View Clubs lettore e esperto
Co-Authored-By: Antonio  <57596737+atdepo@users.noreply.github.com>

--- a/src/main/resources/templates/area-utente/visualizza-esperto.html
+++ b/src/main/resources/templates/area-utente/visualizza-esperto.html
@@ -31,7 +31,7 @@
                                         <a class="btn btn-main" type="button">Gestione Generi</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Visualizza Clubs ed Eventi</a>
+                                        <a class="btn btn-main" href="/visualizza-clubs-personali-esperto" type="button">Visualizza Clubs</a>
                                     </div>
                                 </div>
                             </div>
