--- a/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
+++ b/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
@@ -13,7 +13,7 @@
         <div class="col">
             <div class="card shadow mb-3">
                 <div class="card-header py-3">
-                    <h3 class="text-dark mb-4">Informazioni account</h3>
+                    <h3 class="text-dark mb-4">Lista Esperti</h3>
                     <div class="row">
                         <div class=" col-md-9 col-lg-9 ">
                             <table class="table table-user-information">
