test e checkstyle fatto
Co-Authored-By: Alessio Casolaro <65906352+BearGrillz99@users.noreply.github.com>

--- a/src/main/resources/templates/area-utente/visualizza-lettore.html
+++ b/src/main/resources/templates/area-utente/visualizza-lettore.html
@@ -35,7 +35,7 @@
                                         <a class="btn btn-main" type="button">Questionario di supporto</a>
                                     </div>
                                     <div class="mb-3">
-                                        <a class="btn btn-main" type="button">Questionario di supporto</a>
+                                        <a class="btn btn-main" href = "/comunicazione-esperto/visualizza-esperti-genere" type="button">Visualizza Esperti per te</a>
                                     </div>
                                     <div class="mb-3">
                                         <a class="btn btn-main" type="button">Gestione Generi</a>
