--- a/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
+++ b/src/main/resources/templates/comunicazione-esperto/lista-esperti.html
@@ -6,31 +6,36 @@
     <title>Lista Esperti in base alle tue preferenze</title>
 </head>
 <body>
-<div layout:fragment="contenuto-pagina" class="text-center">
+    <div layout:fragment="contenuto-pagina" class="text-center">
 
 
-    <div class="row">
-        <div class="col">
-            <div class="card shadow mb-3">
-                <div class="card-header py-3">
-                    <h3 class="text-dark mb-4">Lista Esperti</h3>
-                    <div class="row">
-                        <div class=" col-md-9 col-lg-9 ">
-                            <table class="table table-user-information">
-                                <tbody>
-                                <tr th:each="esperto : ${esperti}">
-                                    <td th:text="${esperto.nome}"></td>
-                                    <td th:each="genere : ${esperto.getGeneri()}" th:text="${genere.nome}"></td>
-                                </tr>
-                                </tbody>
-                            </table>
+        <div class="row">
+            <div class="col">
+                <div class="card shadow mb-3">
+                    <div class="card-header py-3">
+                        <h3 class="text-dark mb-4">Lista Esperti</h3>
+                        <div class="row">
+                            <div class=" col-md-9 col-lg-9 ">
+                                <table class="table table-user-information">
+                                    <tbody>
+                                    <tr>
+                                        <th>Nome</th>
+                                        <th>Generi</th>
+                                    </tr>
+                                    <tr th:each="esperto : ${esperti}">
+                                        <td th:text="${esperto.nome}"></td>
+                                        <td th:each="genere : ${esperto.getGeneri()}" th:text="${genere.nome}"></td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
 
+    </div>
 
-<table>
-
-</table>
-</div>
 </body>
 </html>
