Funzionalità quasi completa- da testare
Co-Authored-By: Viviana Pentangelo <60650761+vipenti@users.noreply.github.com>

--- a/src/main/resources/templates/biblioteca/inserimento-nuovo-libro-prenotabile.html
+++ b/src/main/resources/templates/biblioteca/inserimento-nuovo-libro-prenotabile.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Inserimento nuovo libro</title>
 </head>
 <body>
+
+<div>
+    <form method="post" action="/biblioteca/inserimento-isbn">
+        <input type="text" name="isbn">
+        <input type="text" name="generi">
+        <input type="number" name="numCopie" value="2">
+        <input type="submit" value="Conferma">
+    </form>
+</div>
 
 </body>
 </html>
