--- a/src/main/resources/templates/biblioteca/visualizza-lista-biblioteche.html
+++ b/src/main/resources/templates/biblioteca/visualizza-lista-biblioteche.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lista Biblioteche</title>
 </head>
 <body>
 
