update inserimento isbn con immagine
Co-Authored-By: Viviana Pentangelo <60650761+vipenti@users.noreply.github.com>

--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -22,6 +22,11 @@
     border-radius: 0 !important;
 }
 
+.btn:focus {
+    outline: none;
+    box-shadow: none;
+}
+
 a:hover {
     cursor: pointer;
 }
